--- a/membership/templates/membership/memberships.html
+++ b/membership/templates/membership/memberships.html
@@ -4,6 +4,22 @@
 {% block full_title %}Become a Member of TXRX Labs{% endblock %}
 
 {% block main %}
+{% if request.GET.canceled %}
+{% block header %}{% endblock %}
+<div class="row">
+  <div class="col-sm-8 col-sm-offset-2">
+    <div class="alert alert-danger">
+      <h2>Important information about your cancelation</h2>
+      <p class="lead">
+        If you have a bay or drawer at TXRX Labs please subscribe for a new membership below or make arrangements to clean out your belongings within the next 72 hours. 
+      </p>
+      <p class="lead">
+        We're sad to see you go, and hope you come back for another membership or class in the future.
+      </p>
+    </div>
+  </div>
+</div>
+{% endif %}
 <script type="text/javascript">
 
 membership_form_parameters = {}; //this is established at the bottom of every form
