--- a/main/templates/base.html
+++ b/main/templates/base.html
@@ -38,6 +38,7 @@
     <script src="{{ STATIC_URL }}js/jquery-1.11.2.js"></script>
     <script src="{{ STATIC_URL }}bower/ur/unrest.js"></script>
     <script src="{{ STATIC_URL }}bower/ur/router.js"></script>
+    <script src="{{ STATIC_URL }}bower/ur/auth.js"></script>
     <script src="{{ STATIC_URL }}js/jsi18n.js"></script>
     {% block head %}{% endblock %}
     <meta property="og:title" content="{% block fb_title %}{{ settings.SITE_NAME }}: {{ SITE_TAGLINE }}{% endblock %}" />
