--- a/main/templates/_styles.html
+++ b/main/templates/_styles.html
@@ -4,6 +4,7 @@
 <link rel="stylesheet" type="text/css" href="{{ STATIC_URL }}wmd/wmd.css">
 <link rel="stylesheet" type="text/css" href="{{ STATIC_URL }}less/blog.css">
 <link rel="stylesheet" type="text/less" href="{{ STATIC_URL }}less/base.less">
+<link rel="stylesheet" type="text/less" href="{{ STATIC_URL }}bower/ur/less/mask.less">
 {% endcompress %}
 
 <style type="text/css">
