--- a/main/templates/_styles.html
+++ b/main/templates/_styles.html
@@ -5,6 +5,7 @@
 <link rel="stylesheet" type="text/css" href="{{ STATIC_URL }}less/blog.css">
 <link rel="stylesheet" type="text/less" href="{{ STATIC_URL }}less/base.less">
 <link rel="stylesheet" type="text/less" href="{{ STATIC_URL }}bower/ur/less/mask.less">
+<link rel="stylesheet" type="text/less" href="{{ STATIC_URL }}drop/less/stripe.less">
 {% endcompress %}
 
 <style type="text/css">
