--- a/main/templates/base.html
+++ b/main/templates/base.html
@@ -38,6 +38,7 @@
     <script src="{{ STATIC_URL }}js/jquery-1.11.2.js"></script>
     <script src="{{ STATIC_URL }}bower/ur/unrest.js"></script>
     <script src="{{ STATIC_URL }}bower/ur/router.js"></script>
+    <script src="{{ STATIC_URL }}bower/ur/storage.js"></script>
     <script src="{{ STATIC_URL }}bower/ur/auth.js"></script>
     <script src="{{ STATIC_URL }}js/jsi18n.js"></script>
     {% block head %}{% endblock %}
@@ -132,6 +133,7 @@
     <script src="{{ STATIC_URL }}js/init.js"></script>
     <script src="{{ STATIC_URL }}js/blog.js"></script>
     <script src="{{ STATIC_URL }}js/favico.js"></script>
+    <script src="{{ STATIC_URL }}drop/jquery.payment.js"></script>
     {% endcompress %}
     <script type="text/javascript" src="https://js.stripe.com/v2/"></script>
     {% block extrajs %}{% endblock %}
