--- a/store/templates/store/admin.html
+++ b/store/templates/store/admin.html
@@ -3,7 +3,7 @@
 {% block title %}Shop Admin{% endblock %}
 
 {% block products %}
-<product-list></product-list>
+<product-list model_slugs="store.consumable"></product-list>
 {% endblock %}
 
 {% block pjs %}
