--- a/store/templates/store/receipts.html
+++ b/store/templates/store/receipts.html
@@ -12,11 +12,11 @@
     <div class="well">
       <form method="POST">
         <input name="pk" value="{{ order.pk }}" type="hidden">
-        {% if order.status == order.COMPLETED %}
+        {% if order.status == order.PAID %}
         <input name="status" value="{{ order.SHIPPED }}" type="hidden">
         <button class="btn btn-success pull-right">Mark Delivered</button>
         {% else %}
-        <input name="status" value="{{ order.COMPLETED }}" type="hidden">
+        <input name="status" value="{{ order.PAID }}" type="hidden">
         <button class="btn btn-success pull-right">Un-deliver</button>
         {% endif %}
       </form>
