replacing TXRX.ready with uR.ready

--- a/course/templates/course/detail.html
+++ b/course/templates/course/detail.html
@@ -148,11 +148,11 @@
 {% block extrajs %}
 {% include "_comment_media.html" %}
 <script>
+uR.ready(function() {
   uR.ajax({
     url: '/classes/course_{{ course.id }}.json',
-    success: function(data) {
-      TXRX.ready(function() { riot.mount('session-list',data); });
-    },
+    success: function(data) { riot.mount('session-list',data); },
   });
+});
 </script>
 {% endblock %}
