--- a/main/static/less/checkin.less
+++ b/main/static/less/checkin.less
@@ -34,3 +34,16 @@ todays-checkins {
   }
   &:focus .ur-tooltip-content { display: block; }
 }
+
+.debug-console {
+  border: black double 6px;
+  bottom: 0;
+  left: 0;
+  padding: 5px;
+  position: fixed;
+  .btn {
+    display: block;
+    margin-bottom: 5px;
+    width: 100%;
+  }
+}
