putting jquery, unrest, and django javascript under version control

--- a/main/templates/base.html
+++ b/main/templates/base.html
@@ -33,12 +33,14 @@
     </script>
     
     <link rel="shortcut icon" href="/favicon.ico" />
+    {% compress js %}
     <script src="{{ STATIC_URL }}js/jquery-1.11.2.js"></script>
     <script src="{{ STATIC_URL }}bower/ur/unrest.js"></script>
     <script src="{{ STATIC_URL }}bower/ur/router.js"></script>
     <script src="{{ STATIC_URL }}bower/ur/storage.js"></script>
     <script src="{{ STATIC_URL }}bower/ur/auth.js"></script>
     <script src="{{ STATIC_URL }}js/jsi18n.js"></script>
+    {% endcompress %}
     {% block head %}{% endblock %}
     <meta property="og:title" content="{% block fb_title %}{{ settings.SITE_NAME }}: {{ SITE_TAGLINE }}{% endblock %}" />
     <meta property="og:site_name" content="{{ settings.SITE_NAME }}" />
