--- a/main/static/less/course.less
+++ b/main/static/less/course.less
@@ -108,6 +108,8 @@ session-list .fee {
   top: -54px;
 }
 
+session-list add-to-cart .price { display: none; }
+
 .course .details {
   .closed_string {
     color: red;
