getting ready for giftcards, installing them into course page

--- a/course/templates/course/detail.html
+++ b/course/templates/course/detail.html
@@ -93,9 +93,10 @@
       <a href="{% url "notify_course" course.id %}"><button class="btn btn-success">
           Email me the next time this class is scheduled</button></a>
       {% endif %}
+      <div style="text-align: center;">
+        <add-to-cart product_id="2414" hide_price="true" add_text="Buy Gift Certificate"></add-to-cart>
+      </div>
     </p>
-    <add-to-cart product_id="2414"></add-to-cart>
-
     <div style="clear: both;"></div>
   </div>
   <div class="col-xs-12 col-sm-4 col-md-3 pull-right" id="side">
