--- a/main/templates/base.html
+++ b/main/templates/base.html
@@ -118,12 +118,13 @@
     <script src="{{ STATIC_URL }}bower/ur/dialog.tag" type="riot/tag"></script>
     <script src="{{ STATIC_URL }}bower/ur/form.tag" type="riot/tag"></script>
     <script src="{{ STATIC_URL }}bower/ur/modal.tag" type="riot/tag"></script>
+    <script src="{{ STATIC_URL }}drop/drop.js"></script>
+    <script src="{{ STATIC_URL }}drop/cart.tag" type="riot/tag"></script>
+    <script src="{{ STATIC_URL }}drop/giftcard.tag" type="riot/tag"></script>
     <script src="{{ STATIC_URL }}tags/course.tag" type="riot/tag"></script>
     <script src="{{ STATIC_URL }}tags/store.tag" type="riot/tag"></script>
-    <script src="{{ STATIC_URL }}drop/cart.tag" type="riot/tag"></script>
     <script src="{{ STATIC_URL }}js/course.js"></script>
     <script src="{{ STATIC_URL }}js/simpleCart.js"></script>
-    <script src="{{ STATIC_URL }}drop/drop.js"></script>
     <script src="{{ STATIC_URL }}js/cart.js"></script>
     <script src="{{ STATIC_URL }}js/init.js"></script>
     <script src="{{ STATIC_URL }}js/blog.js"></script>
