--- a/main/templates/_nav.html
+++ b/main/templates/_nav.html
@@ -9,8 +9,8 @@
       <span class="icon-bar"></span>
     </button>
     <a class="navbar-brand" href="/">
-      <img src="{{ STATIC_URL }}img/new_logo.png" height="49"
-           alt="{{ settings.SITE_NAME }} - {{ SITE_TAGLINE }}" title="{{ settings.SITE_NAME }} - {{ SITE_TAGLINE }}"/>
+      <img src="{{ STATIC_URL }}img/new_logo.png" alt="{{ settings.SITE_NAME }} - {{ SITE_TAGLINE }}"
+           title="{{ settings.SITE_NAME }} - {{ SITE_TAGLINE }}"/>
     </a>
   </div>
 
