altering side bar copy

--- a/main/templates/_side.html
+++ b/main/templates/_side.html
@@ -1,9 +1,7 @@
 <section>
-  <h3 class="block_title">Join the {{ settings.SITE_NAME }} Mailing List!</h3>
-  <p>
-    Sign up for our mailing list to stay up-to-date on current events, news, and classes at TXRX Labs.
-  </p>
-  <a class="btn btn-block btn-primary" href="http://eepurl.com/uhcT1">Click here to join</a>
+  <h3 class="block_title">Stay connected!</h3>
+  <p>Sign up for our monthly newsletter for updates on events, workshops, studio tips + tricks, member spotlights and more.</p>
+  <a class="btn btn-block btn-primary" href="http://eepurl.com/uhcT1">Sign Me Up!</a>
 </section>
 
 <section>
