link color and adding partial payment modifier

--- a/main/static/less/colors.less
+++ b/main/static/less/colors.less
@@ -14,6 +14,10 @@
 @brandTwitter: #55ACEE;
 @brandPinterest: #cc2127;
 
+body {
+  --link-color: @blue;
+}
+
 .fa-hover {
   .fa { position: relative; text-align: center; width: 1.5em; }
   &:hover {
