--- a/main/static/less/global.less
+++ b/main/static/less/global.less
@@ -7,7 +7,9 @@
 }*/
 body { width: 100%;}
 body,html { height: 100%; overflow-x: hidden; }
-
+body {
+  --link-color: @blue;
+}
 
 .fa {
   font-family: inherit;
