--- a/main/templates/_nav.html
+++ b/main/templates/_nav.html
@@ -2,12 +2,12 @@
 <nav class="navbar navbar-default" role="navigation">
   <!-- Brand and toggle get grouped for better mobile display -->
   <div class="navbar-header">
-    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar-collapse-1">
+    <a class="navbar-toggle" data-toggle="collapse" data-target="#navbar-collapse-1" href="#navbar-collapse-dne">
       <span class="sr-only">Toggle navigation</span>
       <span class="icon-bar"></span>
       <span class="icon-bar"></span>
       <span class="icon-bar"></span>
-    </button>
+    </a>
     <a class="navbar-brand" href="/">
       <img src="{{ STATIC_URL }}img/new_logo.png" alt="{{ settings.SITE_NAME }} - {{ SITE_TAGLINE }}"
            title="{{ settings.SITE_NAME }} - {{ SITE_TAGLINE }}"/>
