adding a model for storing uploaded files via forms

--- a/main/static/less/form.less
+++ b/main/static/less/form.less
@@ -62,6 +62,12 @@ ur-input checkbox-input {
   }
 }
 
+ur-document {
+  display: block;
+  margin: 0 auto;
+  max-width: 600px;
+}
+
 ur-document ur-form form {
   display: flex;
   flex-wrap: wrap;
