--- a/main/templates/_nav.html
+++ b/main/templates/_nav.html
@@ -2,7 +2,7 @@
 <nav class="navbar navbar-default" role="navigation">
   <!-- Brand and toggle get grouped for better mobile display -->
   <div class="navbar-header">
-    <a class="navbar-toggle" data-toggle="collapse" data-target="#navbar-collapse-1" href="#navbar-collapse-dne">
+    <a class="navbar-toggle" style="cursor:pointer;" onclick="$('#navbar-collapse-1').toggleClass('in')">
       <span class="sr-only">Toggle navigation</span>
       <span class="icon-bar"></span>
       <span class="icon-bar"></span>
