--- a/main/templates/base.html
+++ b/main/templates/base.html
@@ -101,8 +101,10 @@
     {% block extrajs %}{% endblock %}
     <script>
       {% if settings.DEBUG %}uR.DEBUG = true;{% endif %}
-      Stripe.setPublishableKey("{{ settings.STRIPE_PUBLIC_KEY }}");
-      new Favico({animation : 'popFade'}).badge({{ pending_evaluations.count }});
+      uR.ready(function() {
+        Stripe.setPublishableKey("{{ settings.STRIPE_PUBLIC_KEY }}");
+        new Favico({animation : 'popFade'}).badge({{ pending_evaluations.count }});
+      });
     </script>
     <script src="{{ STATIC_URL }}cv/float.js"></script>
     {% if not settings.DEBUG %}
