checkin form styling

--- a/main/static/less/redesign.less
+++ b/main/static/less/redesign.less
@@ -7,6 +7,8 @@ body, html {
 .fa { line-height: inherit; }
 
 @import "checkin.less";
+@import "colors.less";
+@import "form.less";
 
 /* unrest overrides */
 modal > .inner {
