--- a/main/templates/base.html
+++ b/main/templates/base.html
@@ -94,6 +94,7 @@
     <script src="{{ STATIC_URL }}bower/ur/.dist/unrest-built.js"></script>
     <script src="{{ STATIC_URL }}drop/.dist/drop-built.js"></script>
     <script src="{{ STATIC_URL }}txrx-built.js"></script>
+    <script src="{{ STATIC_URL }}.dist/unrest_comments.js"></script>
     {% endcompress %}
     <script src="{{ STATIC_URL }}classes.json?v={% now "ymd_hi" %}"></script>
     <script src="{{ STATIC_URL }}sessions.json?v={% now "ymd_his" %}"></script>
