moving some files around for unrest_comments

--- a/main/templates/_new_styles.html
+++ b/main/templates/_new_styles.html
@@ -3,5 +3,5 @@
 {% compress css %}
 <link rel="stylesheet" type="text/less" href="{{ STATIC_URL }}less/_materialize.css">
 <link rel="stylesheet" type="text/less" href="{{ STATIC_URL }}less/redesign.less">
-<link rel="stylesheet" type="text/less" href="{{ STATIC_URL }}.dist/unrest_comments.css">
+<link rel="stylesheet" type="text/less" href="{{ STATIC_URL }}unrest_comments/.dist/unrest_comments.css">
 {% endcompress %}
