--- a/main/templates/_styles.html
+++ b/main/templates/_styles.html
@@ -3,5 +3,5 @@
 <link rel="stylesheet" type="text/css" href="{{ STATIC_URL }}txrx-built.css">
 <link rel="stylesheet" type="text/css" href="{{ STATIC_URL }}bower/ur/.dist/unrest-built.css">
 <link rel="stylesheet" type="text/css" href="{{ STATIC_URL }}drop/.dist/drop-built.css">
-<link rel="stylesheet" type="text/css" href="{{ STATIC_URL }}.dist/unrest_comments.css">
+<link rel="stylesheet" type="text/css" href="{{ STATIC_URL }}unrest_comments/.dist/unrest_comments.css">
 {% endcompress %}
