--- a/blog/templates/blog/edit.html
+++ b/blog/templates/blog/edit.html
@@ -10,7 +10,7 @@
   {% csrf_token %}
   <div class="form-vertical">
     {% if post %}
-    <p><a href="{% url "post_detail" post.user.username post.slug %}" target="_new">
+    <p><a href="{{ post.get_absolute_url }}" target="_new">
         View this post <span class="glyphicon glyphicon-chevron-right"></span></a></p>
     {% endif %}
     {% for field in form %}
