--- a/main/static/wmd/wmd.css
+++ b/main/static/wmd/wmd.css
@@ -66,7 +66,7 @@
 	margin-right: 5px;
 	
 	position: absolute;
-	background-image: url(images/wmd-buttons.png);
+	background-image: url(/static/wmd/images/wmd-buttons.png);
 	background-repeat: no-repeat;
 	background-position: 0px 0px;
 	display: inline-block; 
