work form is live

--- a/main/static/less/footer.less
+++ b/main/static/less/footer.less
@@ -1,8 +1,11 @@
 footer {
   border-top: @well-border 1px solid;
+  bottom: 0;
+  left: 0;
   margin-top: 40px;
-  position: relative;
+  position: absolute;
   text-align: center;
+  width: 100%;
   .center, .left, .right { padding: 15px; }
   .left, .right {
     position: absolute;
