--- a/main/static/less/global.less
+++ b/main/static/less/global.less
@@ -1,3 +1,4 @@
+
 /*@font1: "Novecentosanswide-Book";
 @font2: "Novecentosanswide-Normal";
 
@@ -9,6 +10,12 @@ body { width: 100%;}
 body,html { height: 100%; overflow-x: hidden; }
 body {
   --link-color: @blue;
+}
+
+#wrapper {
+  min-height: 100%;
+  padding-bottom: 90px;
+  position: relative;
 }
 
 .fa {
