--- a/main/templates/base.html
+++ b/main/templates/base.html
@@ -53,7 +53,7 @@
     {% endcomment %}
   </head>
   <body class="{{ BODY_CLASS }}{% if request.user.is_superuser %} is-superuser{% endif %}">
-    <div class="container">
+    <div class="container" id="wrapper">
       {% if not BODY_CLASS == "kiosk" %}
       {% block nav %}{% include "_nav.html" with page="home" %}{% endblock %}
       {% endif %}
