--- a/main/templates/beta.html
+++ b/main/templates/beta.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% load compress %}
 
-{% block main %}{% endblock %}
+{% block content %}{% endblock %}
 
 {% block extrajs %}
 <script src="https://cdnjs.cloudflare.com/ajax/libs/markdown.js/0.5.0/markdown.min.js"></script>
