tightening up styles of "redesign" a bit

--- a/main/static/less/checkin.less
+++ b/main/static/less/checkin.less
@@ -19,6 +19,10 @@ maintenance, checkin-home, todays-checkins {
   width: 600px;
   .btn { margin-bottom: 20px; }
   h4, .messagelist { text-align: center; }
+  .center {
+    text-align: center;
+    label { text-align: left; }
+  }
 }
 
 todays-checkins {
