--- a/main/templates/beta.html
+++ b/main/templates/beta.html
@@ -2,6 +2,7 @@
 {% load compress %}
 
 {% block content %}{% endblock %}
+{% block main %}{% endblock %}
 
 {% block extrajs %}
 <script src="https://cdnjs.cloudflare.com/ajax/libs/markdown.js/0.5.0/markdown.min.js"></script>
