form styling issues

--- a/main/static/less/txrx.less
+++ b/main/static/less/txrx.less
@@ -517,6 +517,11 @@ ul.errorlist { color: @brand-danger; }
   [type=text] { width: 250px; }
 }
 
+.form-group {
+  padding-top: 1.4em;
+  form.cvfloat & { padding-top: 0; }
+}
+
 .grayscale-me {
   -webkit-filter: grayscale(1);
   filter: grayscale(1);
