--- a/main/static/less/redesign.less
+++ b/main/static/less/redesign.less
@@ -49,13 +49,11 @@ textarea.materialize-textarea {
   /* Emtpy errors aren't native to materialize! */
   &.invalid.empty + label:after {
     display: inline-block;
-    padding-left: 15px;
     position: static;
   }
   + label:after { top: 4rem; } /* dislike the position of this too :( */
   &, + label { /* see text-area, label, .help_text below */
     left: 0;
-    padding-left: 15px;
   }
 
   /* help_text is not native to materialize! */
@@ -85,10 +83,11 @@ ur-input.checkbox .invalid + label[data-error] {
   min-height: 61px; /* checkbox isn't tall enough */
   /* materialize uses transform, not position, which fucks up for reasons I don't remember*/
   label.active { top: -5px; transform: initial; }
-  text-area, .help_text {
+  text-area {
     left: 0; /* materialize sets the left spacing via position.. annoying */
     padding-left: 15px; /* indent them all the same amount */
   }
+  .help_text { padding-top: 0.4rem; }
 }
 
 /* Chrome default is like 40px */
