better errors on rfids, changing how "fake CCC" works, adjusting mobile footer size

--- a/main/static/less/global.less
+++ b/main/static/less/global.less
@@ -16,6 +16,7 @@ body {
   min-height: 100%;
   padding-bottom: 90px;
   position: relative;
+  @media (max-width: @screen-sm-max) { padding-bottom: 180px; }
 }
 
 .fa {
