adding mobile cart button because it is hidden in dropdown

--- a/main/static/less/cart.less
+++ b/main/static/less/cart.less
@@ -1,4 +1,11 @@
 .store-button { display:none; }
+
+.mobile-cart cart-button {
+  top: 9px;
+  right: 60px;
+  position: absolute;
+}
+
 cart {
   overflow-y: scroll;
   z-index:1000;
