moving unrest out of bower since its not a package yet

--- a/main/templates/base.html
+++ b/main/templates/base.html
@@ -91,7 +91,7 @@
     {% include "_airbreak.html" %}
     <script src="https://cdn.jsdelivr.net/riot/2.5/riot+compiler.min.js"></script>
     {% compress js %}
-    <script src="{{ STATIC_URL }}bower/ur/.dist/unrest-built.js"></script>
+    <script src="{{ STATIC_URL }}unrest/.dist/unrest-built.js"></script>
     <script src="{{ STATIC_URL }}drop/.dist/drop-built.js"></script>
     <script src="{{ STATIC_URL }}txrx-built.js"></script>
     <script src="{{ STATIC_URL }}unrest_comments/.dist/unrest_comments.js"></script>
