--- a/main/templates/_new_styles.html
+++ b/main/templates/_new_styles.html
@@ -3,6 +3,6 @@
 {% compress css %}
 <link rel="stylesheet" type="text/less" href="{{ STATIC_URL }}less/_materialize.css">
 <link rel="stylesheet" type="text/less" href="{{ STATIC_URL }}less/redesign.less">
-<link rel="stylesheet" type="text/less" href="{{ STATIC_URL }}bower/ur/.dist/unrest-built.css">
+<link rel="stylesheet" type="text/less" href="{{ STATIC_URL }}unrest/.dist/unrest-built.css">
 <link rel="stylesheet" type="text/less" href="{{ STATIC_URL }}unrest_comments/.dist/unrest_comments.css">
 {% endcompress %}
