--- a/main/templates/_styles.html
+++ b/main/templates/_styles.html
@@ -1,7 +1,7 @@
 {% load compress %}
 {% compress css %}
 <link rel="stylesheet" type="text/css" href="{{ STATIC_URL }}txrx-built.css">
-<link rel="stylesheet" type="text/css" href="{{ STATIC_URL }}bower/ur/.dist/unrest-built.css">
+<link rel="stylesheet" type="text/css" href="{{ STATIC_URL }}unrest/.dist/unrest-built.css">
 <link rel="stylesheet" type="text/css" href="{{ STATIC_URL }}drop/.dist/drop-built.css">
 <link rel="stylesheet" type="text/css" href="{{ STATIC_URL }}unrest_comments/.dist/unrest_comments.css">
 {% endcompress %}
