--- a/main/templates/admin/index.html
+++ b/main/templates/admin/index.html
@@ -57,7 +57,7 @@
 {% block extrajs %}
 {{ block.super }}
 {% compress js %}
-<script src="{{ STATIC_URL }}bower/ur/unrest.js"></script>
+<script src="{{ STATIC_URL }}unrest/unrest.js"></script>
 <script src="{{ STATIC_URL }}js/jwt.js"></script>
 <script src="{{ STATIC_URL }}js/admin_index.js"></script>
 {% endcompress %}
@@ -65,7 +65,7 @@
 <script src="{{ STATIC_URL }}tags/admin.tag" type="riot/tag"></script>
 <script src="{{ STATIC_URL }}tags/auth.tag" type="riot/tag"></script>
 <script src="{{ STATIC_URL }}tags/input-fields.tag" type="riot/tag"></script>
-<script src="{{ STATIC_URL }}bower/ur/modal.tag" type="riot/tag"></script>
+<script src="{{ STATIC_URL }}unrest/modal.tag" type="riot/tag"></script>
 {% compress css %}
 <link type="text/less" rel="stylesheet" href="{{ STATIC_URL }}less/admin_index.less" />
 {% endcompress %}
