--- a/main/templates/beta.html
+++ b/main/templates/beta.html
@@ -10,7 +10,7 @@
 {% compress js %}
 <script type="riot/tag" src="{{ STATIC_URL }}tags/checkin.tag"></script>
 <script type="riot/tag" src="{{ STATIC_URL }}tags/tool.tag"></script>
-<script type="riot/tag" src="{{ STATIC_URL }}bower/ur/markdown.tag"></script>
+<script type="riot/tag" src="{{ STATIC_URL }}unrest/markdown.tag"></script>
 <script type="riot/tag" src="{{ STATIC_URL }}tags/poll.tag"></script>
 <script src="{{ STATIC_URL }}js/router.js"></script>
 <script src="{{ STATIC_URL }}js/jwt.js"></script>
