restyling nav to have login on top

--- a/main/static/less/checkin.less
+++ b/main/static/less/checkin.less
@@ -16,7 +16,7 @@ body.kiosk {
 maintenance, checkin-home, todays-checkins {
   display: block;
   margin: 0 auto;
-  width: 600px;
+  max-width: 600px;
   .btn { margin-bottom: 20px; }
   h4, .messagelist { text-align: center; }
   .center {
