--- a/main/static/less/nav.less
+++ b/main/static/less/nav.less
@@ -10,7 +10,18 @@
     }
   }
 }
-.navbar-collapse { max-height: none; }
+.navbar-collapse {
+  max-height: none;
+  @media (max-width: @screen-xs-max) {
+    display: flex;
+    flex-wrap: wrap;
+    .navbar-nav {
+      flex-basis: 100%;
+      order: 1;
+      &.auth { order: 0; }
+    }
+  }
+}
 .navbar-nav > li.current a:after {
   background: @gray-lighter;
   content: "";
